--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Potta+One&family=Roboto:wght@100&display=swap");
 
 
 *{
