--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,6 +1,5 @@
 @import "colors";
 
- 
 .home {
   width: 100%;
   height: 100vh;
@@ -74,7 +73,7 @@
 
 @keyframes imgUp {
   to {
-    transform: translateY(-10px);
+    transform: translateY(-10px);   // for up and down animaction 
   }
 }
 
@@ -96,21 +95,21 @@
     justify-content: center;
     padding: 2rem;
 
-     > h1 {
-       text-transform: uppercase;
+    > h1 {
+      text-transform: uppercase;
       border-bottom: 2px solid $dark;
-       padding: 0.5rem;
-       width: 15rem;
+      padding: 0.5rem;
+      width: 15rem;
       color: $dark;
     }
 
-      > p {
-       padding: 1rem;
+    > p {
+      padding: 5rem;
       letter-spacing: 1px;
-       word-spacing: 5px;
-       line-height: 140%;
-       font: italic 100 1rem $text2;
-     }
+      word-spacing: 5px;
+      line-height: 170%;
+      font: italic 100 1.2rem $text2;
+    }
   }
 }
 
@@ -148,8 +147,8 @@
       > div {
         animation: imgUp 0.7s linear infinite alternate;
         margin: 1rem;
-        height: 7rem;
-        width: 7rem;
+        height: 10rem;
+        width: 10rem;
         background-color: $first;
         border-radius: 50%;
         display: flex;
